Fix background image overflowing on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,6 +508,8 @@ html {
 
 .project {
     display: flex;
+    position: relative;
+    overflow: hidden;
     flex-direction: column;
     justify-content: end;
     align-items: flex-start;
